Updated menu color for readability

--- a/resources/assets/less/overrides.less
+++ b/resources/assets/less/overrides.less
@@ -14,6 +14,11 @@
     overflow: hidden;
 }
 
+.dropdown-menu>li>a {
+    color: #354044;
+}
+
+
 #sort tr.cansort {
 border-radius: 2px;
 padding: 10px;
