Cleanup js and CSS elixir stuff

--- a/resources/assets/less/AdminLTE.less
+++ b/resources/assets/less/AdminLTE.less
@@ -12,8 +12,8 @@
 //Bootstrap Variables & Mixins
 //The core bootstrap code have not been modified. These files
 //are included only for reference.
-@import (reference) "../bootstrap-less/mixins.less";
-@import (reference) "../bootstrap-less/variables.less";
+@import "../less/bootstrap-less/mixins.less";
+@import "../less/bootstrap-less/variables.less";
 
 //MISC
 //----
@@ -38,23 +38,16 @@
 @import "callout.less";
 @import "alerts.less";
 @import "navs.less";
-@import "products.less";
 @import "table.less";
 @import "labels.less";
 @import "direct-chat.less";
 @import "users-list.less";
-@import "carousel.less";
 @import "modal.less";
-@import "social-widgets.less";
 
 //PAGES
 //------
-@import "mailbox.less";
-@import "lockscreen.less";
 @import "login_and_register.less";
 @import "404_500_errors.less";
-@import "invoice.less";
-@import "profile";
 
 //Plugins
 //--------
