More mobile fixes

--- a/resources/assets/less/header.less
+++ b/resources/assets/less/header.less
@@ -242,3 +242,27 @@
     }
   }
 }
+
+// Collapse header
+@media (max-width: @screen-sm-max) {
+  .content-header {
+    padding-top: 110px;
+  }
+}
+
+// Collapse header
+@media (max-width: @screen-sm-max) {
+  ul.sidebar-menu {
+    padding-top: 120px;
+  }
+}
+
+// Collapse header
+@media (max-width: @screen-sm-max) {
+  .sidebar-toggle-mobile a {
+    color: white;
+  }
+}
+
+
+
