More layout fixes for small devices.

--- a/resources/assets/less/overrides.less
+++ b/resources/assets/less/overrides.less
@@ -2,7 +2,8 @@
   background-color: inherit;
 }
 .main-header .logo {
-  min-width: 380px;
+  width: 100% !important;
+  white-space: nowrap;
   text-align: left;
   display: block;
   clear: both;
